Fix `z-index` for header

--- a/client/css/landing.css
+++ b/client/css/landing.css
@@ -109,7 +109,7 @@
     top: 52px;
     right: 0;
     width: 220px;
-    z-index: 1;
+    z-index: 10;
 }
 
 .download-item {
