--- a/client/css/main.css
+++ b/client/css/main.css
@@ -69,7 +69,7 @@ a, a:link, a:visited {
     top: 0;
     left: 0;
     overflow-x: auto;
-    z-index: 1;
+    z-index: 100;
 }
 
 .nav-link {
